# sdk

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  lint.cmake  prelude.cmake  variables.cmake
include/sdk/: plugin.hpp  sdk.hpp
src/: sdk.cpp
src/linux/: plugin.cpp
src/windows/: plugin.cpp
tests/: CMakeLists.txt
tests/src/: sdk_test.cpp
